@@ -17,9 +17,10 @@
 package com.swirlds.platform.system.events;
 
 import com.hedera.hapi.platform.event.EventCore;
-import com.hedera.hapi.platform.event.EventPayload;
-import com.hedera.hapi.platform.event.EventPayload.PayloadOneOfType;
-import com.hedera.hapi.platform.event.StateSignaturePayload;
+import com.hedera.hapi.platform.event.EventDescriptor;
+import com.hedera.hapi.platform.event.EventTransaction;
+import com.hedera.hapi.platform.event.EventTransaction.TransactionOneOfType;
+import com.hedera.hapi.platform.event.StateSignatureTransaction;
 import com.hedera.hapi.util.HapiUtils;
 import com.hedera.pbj.runtime.OneOf;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
@@ -31,17 +32,13 @@ import com.swirlds.common.io.streams.SerializableDataOutputStream;
 import com.swirlds.common.platform.NodeId;
 import com.swirlds.platform.system.SoftwareVersion;
 import com.swirlds.platform.system.StaticSoftwareVersion;
-import com.swirlds.platform.system.address.AddressBook;
-import com.swirlds.platform.system.transaction.ConsensusTransactionImpl;
-import com.swirlds.platform.system.transaction.StateSignatureTransaction;
-import com.swirlds.platform.system.transaction.SwirldTransaction;
-import com.swirlds.platform.util.PayloadUtils;
+import com.swirlds.platform.system.transaction.TransactionWrapper;
+import com.swirlds.platform.util.TransactionUtils;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import java.io.IOException;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Stream;
@@ -85,15 +82,15 @@ public class UnsignedEvent extends AbstractHashable {
     /**
      * the self parent event descriptor
      */
-    private final EventDescriptor selfParent;
+    private final EventDescriptorWrapper selfParent;
 
     /**
      * the other parents' event descriptors
      */
-    private final List<EventDescriptor> otherParents;
+    private final List<EventDescriptorWrapper> otherParents;
 
     /** a combined list of all parents, selfParent + otherParents */
-    private final List<EventDescriptor> allParents;
+    private final List<EventDescriptorWrapper> allParents;
 
     /**
      * creation time, as claimed by its creator
@@ -101,9 +98,9 @@ public class UnsignedEvent extends AbstractHashable {
     private final Instant timeCreated;
 
     /**
-     * the payload: an array of transactions
+     * list of transactions
      */
-    private final ConsensusTransactionImpl[] transactions;
+    private final List<TransactionWrapper> transactions;
 
     /**
      * The core event data.
@@ -111,14 +108,14 @@ public class UnsignedEvent extends AbstractHashable {
     private final EventCore eventCore;
 
     /**
-     * The payloads of the event.
+     * The transactions of the event.
      */
-    private final List<EventPayload> payloads;
+    private final List<EventTransaction> eventTransactions;
 
     /**
      * The event descriptor for this event. Is not itself hashed.
      */
-    private EventDescriptor descriptor;
+    private EventDescriptorWrapper descriptor;
 
     /**
      * Create a UnsignedEvent object
@@ -129,16 +126,16 @@ public class UnsignedEvent extends AbstractHashable {
      * @param otherParents    other parent event descriptors
      * @param birthRound      the round in which this event was created.
      * @param timeCreated     creation time, as claimed by its creator
-     * @param transactions    the payload: an array of transactions included in this event instance
+     * @param transactions    list of transactions included in this event instance
      */
     public UnsignedEvent(
             @NonNull final SoftwareVersion softwareVersion,
             @NonNull final NodeId creatorId,
-            @Nullable final EventDescriptor selfParent,
-            @NonNull final List<EventDescriptor> otherParents,
+            @Nullable final EventDescriptorWrapper selfParent,
+            @NonNull final List<EventDescriptorWrapper> otherParents,
             final long birthRound,
             @NonNull final Instant timeCreated,
-            @NonNull final List<OneOf<PayloadOneOfType>> transactions) {
+            @NonNull final List<EventTransaction> transactions) {
         Objects.requireNonNull(transactions, "The transactions must not be null");
         this.softwareVersion = Objects.requireNonNull(softwareVersion, "The softwareVersion must not be null");
         this.creatorId = Objects.requireNonNull(creatorId, "The creatorId must not be null");
@@ -149,24 +146,16 @@ public class UnsignedEvent extends AbstractHashable {
         this.allParents = createAllParentsList();
         this.timeCreated = Objects.requireNonNull(timeCreated, "The timeCreated must not be null");
 
-        this.payloads = transactions.stream().map(EventPayload::new).toList();
+        this.eventTransactions = Objects.requireNonNull(transactions, "transactions must not be null");
         this.eventCore = new EventCore(
                 creatorId.id(),
                 birthRound,
                 HapiUtils.asTimestamp(timeCreated),
                 this.allParents.stream()
-                        .map(ed -> new com.hedera.hapi.platform.event.EventDescriptor(
-                                ed.getHash().getBytes(), ed.getCreator().id(), ed.getGeneration(), ed.getBirthRound()))
+                        .map(EventDescriptorWrapper::eventDescriptor)
                         .toList(),
                 softwareVersion.getPbjSemanticVersion());
-        this.transactions = transactions.stream()
-                .map(t -> switch (t.kind()) {
-                    case STATE_SIGNATURE_PAYLOAD -> new StateSignatureTransaction(t.as());
-                    case APPLICATION_PAYLOAD -> new SwirldTransaction((Bytes) t.as());
-                    default -> throw new IllegalArgumentException("Unexpected transaction type: " + t.kind());
-                })
-                .toList()
-                .toArray(new ConsensusTransactionImpl[0]);
+        this.transactions = transactions.stream().map(TransactionWrapper::new).toList();
     }
 
     /**
@@ -174,7 +163,7 @@ public class UnsignedEvent extends AbstractHashable {
      * Since events are being migrated to protobuf, calculating the hash of an event will change.
      *
      * @param out the stream to which this object is to be written
-     * @throws IOException if unsupported payload types are encountered
+     * @throws IOException if unsupported transaction types are encountered
      */
     public void serializeLegacyHashBytes(@NonNull final SerializableDataOutputStream out) throws IOException {
         out.writeLong(CLASS_ID);
@@ -186,65 +175,68 @@ public class UnsignedEvent extends AbstractHashable {
      *
      * @param out the stream to which this object is to be written
      *
-     * @throws IOException if unsupported payload types are encountered
+     * @throws IOException if unsupported transaction types are encountered
      */
     public void serialize(@NonNull final SerializableDataOutputStream out) throws IOException {
         out.writeInt(ClassVersion.BIRTH_ROUND);
         out.writeSerializable(softwareVersion, true);
         out.writeInt(NodeId.ClassVersion.ORIGINAL);
         out.writeLong(eventCore.creatorNodeId());
-        out.writeSerializable(selfParent, false);
-        out.writeSerializableList(otherParents, false, true);
+        EventDescriptorWrapper.serialize(out, selfParent);
+        EventDescriptorWrapper.serializeList(out, otherParents);
         out.writeLong(eventCore.birthRound());
         out.writeInstant(HapiUtils.asInstant(eventCore.timeCreated()));
 
         // write serialized length of transaction array first, so during the deserialization proces
         // it is possible to skip transaction array and move on to the next object
-        out.writeInt(PayloadUtils.getLegacyObjectSize(payloads));
+        out.writeInt(TransactionUtils.getLegacyObjectSize(eventTransactions));
         // transactions may include both system transactions and application transactions
         // so writeClassId set to true and allSameClass set to false
-        out.writeInt(payloads.size());
-        if (!payloads.isEmpty()) {
+        out.writeInt(eventTransactions.size());
+        if (!eventTransactions.isEmpty()) {
             final boolean allSameClass = false;
             out.writeBoolean(allSameClass);
         }
-        for (final EventPayload payload : payloads) {
-            switch (payload.payload().kind()) {
-                case APPLICATION_PAYLOAD:
-                    serializeApplicationPayload(out, payload);
+        for (final EventTransaction transaction : eventTransactions) {
+            switch (transaction.transaction().kind()) {
+                case APPLICATION_TRANSACTION:
+                    serializeApplicationTransaction(out, transaction);
                     break;
-                case STATE_SIGNATURE_PAYLOAD:
-                    serializeStateSignaturePayload(out, payload);
+                case STATE_SIGNATURE_TRANSACTION:
+                    serializeStateSignatureTransaction(out, transaction);
                     break;
                 default:
-                    throw new IOException(
-                            "Unknown payload type: " + payload.payload().kind());
+                    throw new IOException("Unknown transaction type: "
+                            + transaction.transaction().kind());
             }
         }
     }
 
-    private static void serializeApplicationPayload(
-            @NonNull final SerializableDataOutputStream out, @NonNull final EventPayload payload) throws IOException {
+    private static void serializeApplicationTransaction(
+            @NonNull final SerializableDataOutputStream out, @NonNull final EventTransaction transaction)
+            throws IOException {
         out.writeLong(APPLICATION_TRANSACTION_CLASS_ID);
         out.writeInt(APPLICATION_TRANSACTION_VERSION);
-        final Bytes bytes = payload.payload().as();
+        final Bytes bytes = transaction.transaction().as();
         out.writeInt((int) bytes.length());
         bytes.writeTo(out);
     }
 
-    private static void serializeStateSignaturePayload(
-            @NonNull final SerializableDataOutputStream out, @NonNull final EventPayload payload) throws IOException {
-        final StateSignaturePayload stateSignaturePayload = payload.payload().as();
+    private static void serializeStateSignatureTransaction(
+            @NonNull final SerializableDataOutputStream out, @NonNull final EventTransaction transaction)
+            throws IOException {
+        final StateSignatureTransaction stateSignatureTransaction =
+                transaction.transaction().as();
 
         out.writeLong(STATE_SIGNATURE_CLASS_ID);
         out.writeInt(STATE_SIGNATURE_VERSION);
-        out.writeInt((int) stateSignaturePayload.signature().length());
-        stateSignaturePayload.signature().writeTo(out);
+        out.writeInt((int) stateSignatureTransaction.signature().length());
+        stateSignatureTransaction.signature().writeTo(out);
 
-        out.writeInt((int) stateSignaturePayload.hash().length());
-        stateSignaturePayload.hash().writeTo(out);
+        out.writeInt((int) stateSignatureTransaction.hash().length());
+        stateSignatureTransaction.hash().writeTo(out);
 
-        out.writeLong(stateSignaturePayload.round());
+        out.writeLong(stateSignatureTransaction.round());
         out.writeInt(Integer.MIN_VALUE); // epochHash is always null
     }
 
@@ -253,7 +245,7 @@ public class UnsignedEvent extends AbstractHashable {
      *
      * @param in the stream from which this object is to be read
      * @return the deserialized event
-     * @throws IOException if unsupported payload types are encountered
+     * @throws IOException if unsupported transaction types are encountered
      */
     public static UnsignedEvent deserialize(@NonNull final SerializableDataInputStream in) throws IOException {
         final int version = in.readInt();
@@ -269,27 +261,30 @@ public class UnsignedEvent extends AbstractHashable {
         if (creatorId == null) {
             throw new IOException("creatorId is null");
         }
-        final EventDescriptor selfParent = in.readSerializable(false, EventDescriptor::new);
-        final List<EventDescriptor> otherParents =
-                in.readSerializableList(AddressBook.MAX_ADDRESSES, false, EventDescriptor::new);
+        final EventDescriptorWrapper selfParent = EventDescriptorWrapper.deserialize(in);
+        final List<EventDescriptorWrapper> otherParents = EventDescriptorWrapper.deserializeList(in);
         final long birthRound = in.readLong();
 
         final Instant timeCreated = in.readInstant();
         in.readInt(); // read serialized length
-        final List<OneOf<PayloadOneOfType>> transactionList = new ArrayList<>();
-        final int payloadSize = in.readInt();
-        if (payloadSize > 0) {
+        final List<EventTransaction> transactionList = new ArrayList<>();
+        final int transactionSize = in.readInt();
+        if (transactionSize > 0) {
             in.readBoolean(); // allSameClass
         }
-        for (int i = 0; i < payloadSize; i++) {
+        for (int i = 0; i < transactionSize; i++) {
             final long classId = in.readLong();
             final int classVersion = in.readInt();
             if (classId == APPLICATION_TRANSACTION_CLASS_ID) {
-                transactionList.add(new OneOf<>(
-                        PayloadOneOfType.APPLICATION_PAYLOAD, deserializeApplicationPayload(in, classVersion)));
+                final OneOf<TransactionOneOfType> oneOf = new OneOf<>(
+                        TransactionOneOfType.APPLICATION_TRANSACTION,
+                        deserializeApplicationTransaction(in, classVersion));
+                transactionList.add(new EventTransaction(oneOf));
             } else if (classId == STATE_SIGNATURE_CLASS_ID) {
-                transactionList.add(new OneOf<>(
-                        PayloadOneOfType.STATE_SIGNATURE_PAYLOAD, deserializeStateSignaturePayload(in, classVersion)));
+                final OneOf<TransactionOneOfType> oneOf = new OneOf<>(
+                        TransactionOneOfType.STATE_SIGNATURE_TRANSACTION,
+                        deserializeStateSignatureTransaction(in, classVersion));
+                transactionList.add(new EventTransaction(oneOf));
             } else {
                 throw new IOException("Unknown classId: " + classId);
             }
@@ -300,7 +295,7 @@ public class UnsignedEvent extends AbstractHashable {
     }
 
     @Nullable
-    private static Bytes deserializeApplicationPayload(
+    private static Bytes deserializeApplicationTransaction(
             @NonNull final SerializableDataInputStream in, final int classVersion) throws IOException {
         if (classVersion != APPLICATION_TRANSACTION_VERSION) {
             throw new IOException("Unsupported application class version: " + classVersion);
@@ -313,7 +308,7 @@ public class UnsignedEvent extends AbstractHashable {
         return null;
     }
 
-    private static StateSignaturePayload deserializeStateSignaturePayload(
+    private static StateSignatureTransaction deserializeStateSignatureTransaction(
             SerializableDataInputStream in, int classVersion) throws IOException {
         if (classVersion != STATE_SIGNATURE_VERSION) {
             throw new IOException("Unsupported state signature class version: " + classVersion);
@@ -322,7 +317,7 @@ public class UnsignedEvent extends AbstractHashable {
         final byte[] hashBytes = in.readByteArray(1000000);
         final long round = in.readLong();
         in.readInt(); // epochHash is always null
-        return new StateSignaturePayload(round, Bytes.wrap(sigBytes), Bytes.wrap(hashBytes));
+        return new StateSignatureTransaction(round, Bytes.wrap(sigBytes), Bytes.wrap(hashBytes));
     }
 
     @Override
@@ -342,16 +337,19 @@ public class UnsignedEvent extends AbstractHashable {
                 && Objects.equals(otherParents, that.otherParents)
                 && eventCore.birthRound() == that.eventCore.birthRound()
                 && Objects.equals(timeCreated, that.timeCreated)
-                && Arrays.equals(transactions, that.transactions)
+                && Objects.equals(transactions, that.transactions)
                 && (softwareVersion.compareTo(that.softwareVersion) == 0);
     }
 
     @Override
     public int hashCode() {
-        int result =
-                Objects.hash(softwareVersion, creatorId, selfParent, otherParents, eventCore.birthRound(), timeCreated);
-        result = 31 * result + Arrays.hashCode(transactions);
-        return result;
+        return Objects.hash(
+                getSoftwareVersion(),
+                getCreatorId(),
+                getSelfParent(),
+                getOtherParents(),
+                getTimeCreated(),
+                getTransactions());
     }
 
     @Override
@@ -363,7 +361,7 @@ public class UnsignedEvent extends AbstractHashable {
                 .append("otherParents", otherParents)
                 .append("birthRound", eventCore.birthRound())
                 .append("timeCreated", timeCreated)
-                .append("transactions size", transactions == null ? "null" : transactions.length)
+                .append("transactions size", transactions == null ? "null" : transactions.size())
                 .append("hash", getHash() == null ? "null" : getHash().toHex(TO_STRING_BYTE_ARRAY_LENGTH))
                 .toString();
     }
@@ -403,7 +401,7 @@ public class UnsignedEvent extends AbstractHashable {
      * @return the event descriptor for the self parent
      */
     @Nullable
-    public EventDescriptor getSelfParent() {
+    public EventDescriptorWrapper getSelfParent() {
         return selfParent;
     }
 
@@ -413,18 +411,18 @@ public class UnsignedEvent extends AbstractHashable {
      * @return the event descriptors for the other parents
      */
     @NonNull
-    public List<EventDescriptor> getOtherParents() {
+    public List<EventDescriptorWrapper> getOtherParents() {
         return otherParents;
     }
 
     /** @return a list of all parents, self parent (if any), + all other parents */
     @NonNull
-    public List<EventDescriptor> getAllParents() {
+    public List<EventDescriptorWrapper> getAllParents() {
         return allParents;
     }
 
     @NonNull
-    private List<EventDescriptor> createAllParentsList() {
+    private List<EventDescriptorWrapper> createAllParentsList() {
         return !hasSelfParent()
                 ? otherParents
                 : Stream.concat(Stream.of(selfParent), otherParents.stream()).toList();
@@ -439,7 +437,7 @@ public class UnsignedEvent extends AbstractHashable {
         if (selfParent == null) {
             return EventConstants.GENERATION_UNDEFINED;
         }
-        return selfParent.getGeneration();
+        return selfParent.eventDescriptor().generation();
     }
 
     /**
@@ -448,12 +446,13 @@ public class UnsignedEvent extends AbstractHashable {
      * @return the maximum generation of the other parents
      * @deprecated this method should be replaced since there can be multiple other parents.
      */
+    @Deprecated
     public long getOtherParentGen() {
         if (otherParents == null || otherParents.isEmpty()) {
             return EventConstants.GENERATION_UNDEFINED;
         }
         if (otherParents.size() == 1) {
-            return otherParents.get(0).getGeneration();
+            return otherParents.getFirst().eventDescriptor().generation();
         }
         // 0.46.0 adds support for multiple other parents in the serialization scheme, but not yet in the
         // implementation. This exception should never be reached unless we have multiple parents and need to
@@ -471,22 +470,22 @@ public class UnsignedEvent extends AbstractHashable {
         if (selfParent == null) {
             return null;
         }
-        return selfParent.getHash();
+        return selfParent.hash();
     }
 
     /**
      * Get the hash of the other parent with the maximum generation.
      *
      * @return the hash of the other parent with the maximum generation
-     * @deprecated
      */
     @Nullable
+    @Deprecated
     public Hash getOtherParentHash() {
         if (otherParents == null || otherParents.isEmpty()) {
             return null;
         }
         if (otherParents.size() == 1) {
-            return otherParents.get(0).getHash();
+            return otherParents.getFirst().hash();
         }
         // 0.46.0 adds support for multiple other parents in the serialization scheme, but not yet in the
         // implementation. This exception should never be reached unless we have multiple parents and need to
@@ -521,7 +520,7 @@ public class UnsignedEvent extends AbstractHashable {
      * @return array of transactions inside this event instance
      */
     @NonNull
-    public ConsensusTransactionImpl[] getTransactions() {
+    public List<TransactionWrapper> getTransactions() {
         return transactions;
     }
 
@@ -548,13 +547,14 @@ public class UnsignedEvent extends AbstractHashable {
      * @throws IllegalStateException if called prior to this event being hashed
      */
     @NonNull
-    public EventDescriptor getDescriptor() {
+    public EventDescriptorWrapper getDescriptor() {
         if (descriptor == null) {
             if (getHash() == null) {
                 throw new IllegalStateException("The hash of the event must be set before creating the descriptor");
             }
 
-            descriptor = new EventDescriptor(getHash(), getCreatorId(), getGeneration(), eventCore.birthRound());
+            descriptor = new EventDescriptorWrapper(new EventDescriptor(
+                    getHash().getBytes(), getEventCore().creatorNodeId(), getBirthRound(), getGeneration()));
         }
 
         return descriptor;
@@ -571,12 +571,12 @@ public class UnsignedEvent extends AbstractHashable {
     }
 
     /**
-     * Get the payloads of the event.
+     * Get the transactions of the event.
      *
-     * @return list of payloads
+     * @return list of transactions
      */
     @NonNull
-    public List<EventPayload> getPayloads() {
-        return payloads;
+    public List<EventTransaction> getEventTransactions() {
+        return eventTransactions;
     }
 }
